tests/syntax_error/missing_self.jou
class Foo:
    def bar() -> void:
        return

def main() -> int:
    f = Foo{}
    f.bar() # Error: error when defining method bar() bacause it has no self
    return 0
